# cassini

./: .gitignore  cassini-pub-sub-flow-notes.md  publish-msg-flow.txt  readme.md  registration-flow.md
broker/: flake.nix  rustc-ice-2025-01-03T17_22_58-30213.txt
broker/src/: broker.rs  client.rs  lib.rs  listener.rs  session.rs  subscriber.rs  topic.rs
broker/tests/: integration_tests.rs
src/: Cargo.toml
src/broker/: Cargo.toml
src/broker/src/: broker.rs  lib.rs  listener.rs  main.rs  session.rs  subscriber.rs  topic.rs
src/cassini-tests/: Cargo.toml  readme.md
src/cassini-tests/tests/: integration_tests.rs
src/client/: Cargo.toml
src/client/src/: client.rs  main.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
