[package]
name = "cassini-client"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1.30", features = ["full"] }
tracing = "0.1.41"
tracing-glog = "0.4.0"
tracing-subscriber = { version ="0.3.19", features=["std", "env-filter"]}
common = { path = "../common" }

[[bin]]
name="cassin-client"
path="src/main.rs"